# xqilla

./: .cvsignore  .hgignore  .hgtags  ChangeLog  LICENSE  Makefile.am  Makefile.in  README  TODO  aclocal.m4  configure  configure.in
CVSROOT/: loginfo
Win32Projects/VC10/: XQilla.sln  dom-basic.vcxproj  dom-context-item.vcxproj  dom-resolver.vcxproj  simple-basic.vcxproj  simple-context-item.vcxproj  xmarkRunner.vcxproj  xqc-basic.vcxproj  xqc-context-item.vcxproj  xqilla.vcxproj  xqilla.vcxproj.filters  xqilla_cmd.vcxproj  xqtsRunner.vcxproj
Win32Projects/VC11/: dom-basic.vcxproj  dom-context-item.vcxproj  dom-resolver.vcxproj  simple-basic.vcxproj  simple-context-item.vcxproj  xmarkRunner.vcxproj  xqc-basic.vcxproj  xqc-context-item.vcxproj  xqilla.vcxproj  xqilla_cmd.vcxproj  xqtsRunner.vcxproj
Win32Projects/VC14/: XQilla.sln  dom-basic.vcxproj  dom-context-item.vcxproj  dom-resolver.vcxproj  simple-basic.vcxproj  simple-context-item.vcxproj  xmarkRunner.vcxproj  xqc-basic.vcxproj  xqc-context-item.vcxproj  xqilla.vcxproj  xqilla_cmd.vcxproj  xqtsRunner.vcxproj
Win32Projects/VC6/: XQilla.dsp  XQilla.dsw  basicXQillaUsage.dsp  dom-basic.dsp  dom-context-item.dsp  dom-resolver.dsp  simple-basic.dsp  simple-context-item.dsp  xmarkRunner.dsp  xqc-basic.dsp  xqc-context-item.dsp  xqilla.dsp  xqilla_cmd.dsp  xqtsRunner.dsp
Win32Projects/VC7.1/: XQilla.sln  XQilla.vcproj  basicXQillaUsage.vcproj  dom-basic.vcproj  dom-context-item.vcproj  dom-resolver.vcproj  simple-basic.vcproj  simple-context-item.vcproj  xmarkRunner.vcproj  xqc-basic.vcproj  xqc-context-item.vcproj  xqilla.vcproj  xqilla_cmd.vcproj  xqilla_cmd_static.vcproj  xqilla_static.vcproj  xqtsRunner.vcproj
Win32Projects/VC8/: XQilla.sln  dom-basic.vcproj  dom-context-item.vcproj  dom-resolver.vcproj  simple-basic.vcproj  simple-context-item.vcproj  xmarkRunner.vcproj  xqc-basic.vcproj  xqc-context-item.vcproj  xqilla.vcproj  xqilla_cmd.vcproj  xqilla_cmd_static.vcproj  xqilla_static.vcproj  xqtsRunner.vcproj
docs/: Doxyfile.devapi.in  Doxyfile.dom3api.in  Doxyfile.simpleapi  Doxyfile.simpleapi.in
include/: Makefile.am  Makefile.in
include/xqilla/: xqilla-dom3.hpp  xqilla-simple.hpp  xqilla-xqc.h
src/: xercesc_content_type.patch
src/ast/: ASTNodeImpl.cpp  AggregateFunction.cpp  ConstantFoldingFunction.cpp  ContextTuple.cpp  ConvertFunctionArg.cpp  CountTuple.cpp  DataItemCastAs.cpp  DataItemCastableAs.cpp  DataItemContextItem.cpp  DataItemFor.cpp  DataItemFunction.cpp  DataItemIf.cpp  DataItemImpl.cpp  DataItemInstanceOf.cpp  DataItemLiteral.cpp  DataItemNav.cpp  DataItemOperator.cpp  DataItemParenthesizedExpr.cpp  DataItemQuantifiedExpr.cpp  DataItemSequence.cpp  DataItemStep.cpp  DataItemTreatAs.cpp  DataItemVariable.cpp  ForTuple.cpp  LetTuple.cpp  NumericFunction.cpp  OrderByTuple.cpp  StaticAnalysis.cpp  StaticResolutionContext.cpp  StaticType.cpp  TupleNode.cpp  WhereTuple.cpp  XPath1Compat.cpp  XQAnalyzeString.cpp  XQApplyTemplates.cpp  XQAtomize.cpp  XQAttributeConstructor.cpp  XQCallTemplate.cpp  XQCastAs.cpp  XQCastableAs.cpp  (+47 more)
src/axis/: AncestorAxis.cpp  AncestorOrSelfAxis.cpp  AttributeAxis.cpp  Axis.cpp  ChildAxis.cpp  DescendantAxis.cpp  DescendantOrSelfAxis.cpp  FollowingAxis.cpp  FollowingSiblingAxis.cpp  NamespaceAxis.cpp  NodeTest.cpp  ParentAxis.cpp  PrecedingAxis.cpp  PrecedingSiblingAxis.cpp  SelfAxis.cpp
src/config/: pathan_config_unix.h.in  pathan_config_win32.h  xqilla_config.h  xqilla_config_unix.h.in  xqilla_config_win32.h
src/context/: UpdateFactory.cpp  XQContext.cpp  XQScopedNamespace.cpp
src/debug/: ASTDebugHook.cpp  DebugHookDecorator.cpp  InputParser.cpp  InteractiveDebugger.cpp  StackFrame.cpp  TupleDebugHook.cpp
src/dom-api/: PathanImplementation.cpp  XPath2NodeSerializer.cpp  XPath2NodeSerializer.hpp  XPath2Result.cpp  XQScopedNamespace.cpp  XQillaImplementation.cpp  XQillaImplementation.hpp
src/events/: ContentSequenceFilter.cpp  EventGenerator.cpp  EventSerializer.cpp  NSFixupFilter.cpp  NoInheritFilter.cpp  NoInheritFilter.hpp  QueryPathTreeFilter.cpp
src/exceptions/: DSLException.cpp  InvalidLexicalSpaceException.hpp  MiscException.hpp  PathanException.cpp  XQException.cpp  XQillaException.cpp
src/fastxdm/: FastXDMConfiguration.cpp  FastXDMDocument.cpp  FastXDMDocument.hpp  FastXDMDocumentCacheImpl.cpp  FastXDMDocumentCacheImpl.hpp  FastXDMNodeImpl.cpp  FastXDMNodeImpl.hpp  FastXDMSequenceBuilder.cpp  FastXDMSequenceBuilder.hpp  FastXDMUpdateFactory.cpp  FastXDMUpdateFactory.hpp
src/framework/: BaseMemoryManager.cpp  ProxyMemoryManager.cpp  ReferenceCounted.cpp  StringPool.cpp  XPath2MemoryManagerImpl.cpp
src/fulltext/: DefaultTokenStore.cpp  DefaultTokenizer.cpp  FTAnd.cpp  FTContains.cpp  FTContent.cpp  FTDistance.cpp  FTMildnot.cpp  FTOr.cpp  FTOrder.cpp  FTScope.cpp  FTUnaryNot.cpp  FTWindow.cpp  FTWords.cpp
src/functions/: BuiltInModules.cpp  CoreModule.hpp  CoreModule.xq  EXSLTMathFunction.cpp  ExternalFunction.cpp  FnModule.hpp  FnModule.xq  FuncFactory.cpp  FuncFactoryTemplate.hpp  FunctionAbs.cpp  FunctionAcos.cpp  FunctionAdjustDateTimeToTimezone.cpp  FunctionAdjustDateToTimezone.cpp  FunctionAdjustTimeToTimezone.cpp  FunctionAnalyzeString.cpp  FunctionAsin.cpp  FunctionAtan.cpp  FunctionAvg.cpp  FunctionBaseURI.cpp  FunctionBoolean.cpp  FunctionCaseFold.cpp  FunctionCeiling.cpp  FunctionCodepointEqual.cpp  FunctionCodepointsToString.cpp  FunctionCollection.cpp  FunctionCompare.cpp  FunctionConcat.cpp  FunctionConstructor.cpp  FunctionContains.cpp  FunctionCos.cpp  FunctionCount.cpp  FunctionCurrentDate.cpp  FunctionCurrentDateTime.cpp  FunctionCurrentTime.cpp  FunctionData.cpp  FunctionDateTime.cpp  FunctionDayFromDate.cpp  FunctionDayFromDateTime.cpp  (+126 more)
tests/: runXQTSTestSuite.sh
wintools/: README  app_dsp.src  app_vcproj.src  genproject.template  genproject.xq  gensrcfiles.xq  lib_paths.sed  s_projects  s_win32  s_win32_common  s_win32_dsp  s_win32_vcproj  srcfiles.in  xqilla.projects  xqilla.template.xml  xqilla.vs2010.xq  xqilla.vs2010_filter.xq  xqilla_cmd.dsp.src  xqilla_cmd.vcproj.src  xqilla_dsp.src  xqilla_vcproj.src
(+1081 files in other folders)
